syntax = "proto3";
option go_package = "core-web/proto";
import "google/protobuf/empty.proto";

message Song {
  string name = 1;
  uint32 seconds = 2;
}

message PlaylistEntry {
  SongLocation location = 1;
  Song data = 2;
}

message SongLocation {
  uint32 id = 1;
}

message NowPlayingResponse {
  PlaylistEntry entry = 1;
  uint32 elapsed = 2;
  bool playing = 3;
}

service CRUD {
  rpc AddSong(Song) returns (SongLocation);
  rpc GetSong(SongLocation) returns (Song);
  rpc UpdateSong(PlaylistEntry) returns (google.protobuf.Empty);
  rpc DeleteSong(SongLocation) returns (Song);
}

service Seek {
  rpc Prev(google.protobuf.Empty) returns (PlaylistEntry);
  rpc Next(google.protobuf.Empty) returns (PlaylistEntry);
  rpc NowPlaying(google.protobuf.Empty) returns (NowPlayingResponse);
  rpc Play(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc Pause(google.protobuf.Empty) returns (google.protobuf.Empty);
}
